src/test/ui/borrowck/issue-24267-flow-exit.stderr
error[E0381]: binding `x` isn't initialized
  --> $DIR/issue-24267-flow-exit.rs:12:20
   |
LL |     let x: i32;
   |         - variable declared here
LL |     loop { x = break; }
LL |     println!("{}", x);
   |                    ^ `x` borrowed here but it isn't initialized
   |
   = note: this error originates in the macro `$crate::format_args_nl` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0381]: binding `x` isn't initialized
  --> $DIR/issue-24267-flow-exit.rs:18:20
   |
LL |     let x: i32;
   |         - variable declared here
LL |     for _ in 0..10 { x = continue; }
LL |     println!("{}", x);
   |                    ^ `x` borrowed here but it isn't initialized
   |
   = note: this error originates in the macro `$crate::format_args_nl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0381`.
